--- a/templates/public/upload_image.html
+++ b/templates/public/upload_image.html
@@ -18,7 +18,7 @@
         <div class="col-lg-6 mx-auto">
 
           <!-- Upload image input-->
-          <form action="upload-image" method="POST" enctype="multipart/form-data">
+          <form action="classification" method="POST" enctype="multipart/form-data">
             <div class="input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
               <input id="upload" name="image" type="file" onchange="readURL(this);" class="form-control border-0">
               <label id="upload-label" for="upload" class="font-weight-light text-muted">Choose file</label>
